force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/NCMT_TCO_Cost_Parameter__c.object-meta.xml
<CustomObject>
    <description>Object for storing the cost parameters for TCO model</description>
    <label>TCO Cost Rates Parameter</label>
    <nameField>
        <displayFormat>CP-{000}</displayFormat>
        <label>NCMT TCO Cost Parameters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCO Cost Rates Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>