force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate__c</fullName>
    <label>Nominal Discount Rate (Cost of Capital)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>