force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Electricity_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Base_Rate__c</fullName>
    <label>Electricity Base Rate ($/kWh)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>