force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Facilities_Mgmt_Esc_Rate__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Mgmt_Esc_Rate__c</fullName>
    <label>Facilities Mgmt. Esc. Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>