force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Facilities_Mgmt_Rate__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Mgmt_Rate__c</fullName>
    <label>Facilities Mgmt. Rate (per hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>