force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Fees_and_Assessment_Esc_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fees_and_Assessment_Esc_Rate__c</fullName>
    <label>Fees and Assessment Esc. Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>