force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>