force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/General_Construction_Esc_Rate__c.field-meta.xml
<CustomField>
    <fullName>General_Construction_Esc_Rate__c</fullName>
    <label>General Construction Esc. Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>