force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Insurance_Esc_rate__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Esc_rate__c</fullName>
    <label>Insurance Esc. rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>