force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Janitorial_Esc_Rate__c.field-meta.xml
<CustomField>
    <fullName>Janitorial_Esc_Rate__c</fullName>
    <description>Yearly Escalation Rate for Janitorial rate</description>
    <label>Janitorial Esc. Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>