force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Janitorial_Rate__c.field-meta.xml
<CustomField>
    <fullName>Janitorial_Rate__c</fullName>
    <inlineHelpText>Field for storing the hourly rate for janitorial services</inlineHelpText>
    <label>Janitorial Rate (per hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>