force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Landscaping_Esc_Rate__c.field-meta.xml
<CustomField>
    <fullName>Landscaping_Esc_Rate__c</fullName>
    <description>Escalation rate for landscaping hourly rate</description>
    <label>Landscaping Esc. Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>