force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Landscaping_Rate__c.field-meta.xml
<CustomField>
    <fullName>Landscaping_Rate__c</fullName>
    <description>Hourly rate for Landscaping Services</description>
    <label>Landscaping Rate (per hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>