force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Other_Cooling_Esc_Rate__c.field-meta.xml
<CustomField>
    <fullName>Other_Cooling_Esc_Rate__c</fullName>
    <inlineHelpText>For other Energy sources, indicate cost per delivered kBtu of heating or cooling. Include conversion losses in cost</inlineHelpText>
    <label>Other Cooling Esc. Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>