force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Other_Cooling_Rate__c.field-meta.xml
<CustomField>
    <fullName>Other_Cooling_Rate__c</fullName>
    <inlineHelpText>For other Energy sources, indicate cost per delivered kBtu of heating or cooling. Include conversion losses in cost</inlineHelpText>
    <label>Other Cooling Rate ($/kBtu)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>