force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Other_Heat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Other_Heat_Rate__c</fullName>
    <label>Other Heat Rate ($/kBtu)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>