force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Renewable_Electricity_Rate__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Electricity_Rate__c</fullName>
    <label>Renewable Electricity Rate ($/kWh)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>