force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Routine_Maintenance_Esc_Rate__c.field-meta.xml
<CustomField>
    <fullName>Routine_Maintenance_Esc_Rate__c</fullName>
    <label>Routine Maintenance Esc. Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>