force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Skilled_Maintenance_Esc_Rate__c.field-meta.xml
<CustomField>
    <fullName>Skilled_Maintenance_Esc_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Skilled Maintenance Esc. Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>