force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/TDV_Ratio_peak__c.field-meta.xml
<CustomField>
    <fullName>TDV_Ratio_peak__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TDV Ratio (peak load rate) (multiplier)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>