force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/fields/Water_Rate__c.field-meta.xml
<CustomField>
    <fullName>Water_Rate__c</fullName>
    <label>Water Rate (kgal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>