force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Janitorial_Rate__c</columns>
    <columns>Landscaping_Rate__c</columns>
    <columns>General_Maintenance_Rate__c</columns>
    <columns>Skilled_Maintenance_Rate__c</columns>
    <columns>Facilities_Mgmt_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>