force-app/main/default/objects/NCMT_TCO_Cost_Parameter__c/listViews/FY_2020.listView-meta.xml
<ListView>
    <fullName>FY_2020</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Electricity_Base_Esc_Rate__c</columns>
    <columns>Electricity_Base_Rate__c</columns>
    <columns>Facilities_Mgmt_Esc_Rate__c</columns>
    <columns>Facilities_Mgmt_Rate__c</columns>
    <columns>Fees_and_Assessment_Esc_Rate__c</columns>
    <columns>Gas_Esc_Rate__c</columns>
    <columns>Gas_Rate__c</columns>
    <columns>General_Construction_Esc_Rate__c</columns>
    <columns>General_Maintenance_Esc_Rate__c</columns>
    <columns>General_Maintenance_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>FY-2020</label>
</ListView>